--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "https://shashi288.github.io/DailyScope",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
@@ -11,12 +11,14 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
