--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{ 
-  "homepage": "https://shashi288.github.io/DailyScope",
+{ "homepage": "https://shashi288.github.io/",
+  
+  
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
