--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://shashi288.github.io/DailyScope/sports",
+{ "homepage": "https://shashi288.github.io/",
   
   
   "name": "newsapp",
