--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://shashi288.github.io/",
+{ "homepage": "https://shashi288.github.io/DailyScope/src/componenets/index.js",
   
   
   "name": "newsapp",
